# desafios-com-python

./: README.md  arquivo.txt  gerar_excell.py  hello.py  pyproject.toml  relatorio.csv
aulas_rocketseat/: excessoes.py  funcoes.py  gerenciador.py  modulo_terceiro.py  modulos.py
automacao.py/: baixa_videos_youtube.py  experimental.py
desafios/: calculadora_de_desconto.py  calculadora_imc.py  calcular_media.py  contador_de_palavras.py  dicionarios.py  equacao_de_segundo_grau.py  fire_github.py  funcao_enumerate.py  gerar_arquivo_CSV.py  hello.py  informacoesOS.py  list_comprehension.py  meu_arquivo.py  numeros_primos.py  operadores_relacionais.py  ordenar_listas.py  pegar_cotacao_b3.py  pyproject.toml  reduce.py  teste.py  tratamento_excessoes.py  trolagem.py  tupla.py  zip_list.py
variaveis.py/: If_else.py  Sets.py  for.py  for_e_range.py  funcoes.py  graficos.py  mario.py  numeros.py  pandas.py  strings.py  texto.py  variaveis.py  while.py
variaveis.py/desafios/: pedra_papel_tesoura.py
