[project]
name = "desafios-com-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyautogui>=0.9.54",
    "pytube>=15.0.0",
    "yfinance>=0.2.51",
    "yt-dlp>=2024.12.23",
]

[tool.uv.workspace]
members = ["desafios"]

[tool.uv.sources]
pytube = { git = "https://github.com/pytube/pytube" }
